# director-of-studies

./: .env.example  .gitignore  EXTRA_NOTES.md  Makefile  Procfile  README.md  TODO.md  specs.yaml  uk_humanities_specs_verified_subset.yml
.github/: copilot-instructions.md
.github/memory/: agent-notes.md
.github/prompts/: project-overview-and-memory.prompt.md  review-plan.prompt.md
apps/agent/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
apps/agent/app/: agent_worker.py  billing.py  db.py  main.py  prompts.py  rag.py
apps/agent/dos_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/agent/scripts/: __init__.py  bootstrap_db.py  build_schools_domain_csv.py  copy_stripe_live_to_test.py  ingest.py  seed_db.py  sync_stripe_prices.py
apps/agent/scripts/pipeline/: __init__.py  beautify_specs.py  checksums.py  discover_topics.py  discovered_topics.py  download_specs.py  extract_specs.py  keywords_specs.py  manifest.py  prompts.py
apps/agent/tests/: conftest.py  test_calendar.py  test_gates.py
apps/web/: Dockerfile  drizzle.config.ts  entrypoint.sh  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/__tests__/: auth-validation.test.ts  calendar-sync.test.ts  cookie-banner.test.ts
apps/web/src/app/: error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx
apps/web/src/components/: AccountMenu.tsx  AuthForm.tsx  CalendarPlanner.tsx  (+16 more)
content/: schools_domain.csv
content/1/1/: keywords.txt  medicine-through-time.md
content/1/2/: elizabethan-england.md  keywords.txt
content/2/3/: keywords.txt  the-tudors.md
content/2/4/: keywords.txt  russia-1917-1991.md
content/3/5/: keywords.txt  macbeth.md
content/3/6/: an-inspector-calls.md  keywords.txt
infra/: docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  livekit.yaml
infra/db/: init.sql
(+1684 files in other folders)
