[project]
name = "dos-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "psycopg[binary]==3.2.4",
  "openai==1.58.1",
  "livekit==0.18.3",
  "livekit-agents==0.12.11",
  "livekit-plugins-deepgram==0.6.16",
  "livekit-plugins-openai==0.10.17",
  "livekit-plugins-silero==0.7.4",
  "python-dotenv==1.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
