[project]
name = "dos-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "psycopg[binary]==3.2.4",
  "psycopg-pool==3.2.4",
  "openai>=2,<3",
  "livekit==1.1.2",
  "livekit-agents==1.4.3",
  "livekit-plugins-deepgram==1.4.3",
  "livekit-plugins-openai==1.4.3",
  "livekit-plugins-silero==1.4.3",
  "python-dotenv==1.0.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
